--- a/week3/余钰莹/事件流模型.md
+++ b/week3/余钰莹/事件流模型.md
@@ -25,8 +25,8 @@
 ![image](http://images2015.cnblogs.com/blog/315302/201606/315302-20160621155328756-279009443.png)
 
 DOM标准规定事件流包括三个阶段：事件捕获阶段、处于目标阶段和事件冒泡阶段。
-1. 事件捕获阶段：实际目标（<div>）在捕获阶段不会接收事件。也就是在捕获阶段，事件从document到<html>再到<body>就停止了。
-2. 处于目标阶段：事件在<div>上发生并处理。但是事件处理会被看成是冒泡阶段的一部分。
+1. 事件捕获阶段：实际目标在捕获阶段不会接收事件。也就是在捕获阶段，事件从document到html再到body就停止了。
+2. 处于目标阶段：事件在div上发生并处理。但是事件处理会被看成是冒泡阶段的一部分。
 3. 冒泡阶段：事件又传播回文档。
 
 
